SERVER-11271 Consistent capitalization of keyfile options