src/mongo/db/initialize_server_global_state.cpp
@@ -328,7 +328,7 @@ namespace mongo {
         }
 
         // Auto-enable auth except if clusterAuthMode is not set.
-        // clusterAuthMode is automatically set if a --keyfile parameter is provided.
+        // clusterAuthMode is automatically set if a --keyFile parameter is provided.
         if (!serverGlobalParams.clusterAuthMode.empty()) {
             getGlobalAuthorizationManager()->setAuthEnabled(true);
         }
