jstests/ssl/initial_sync1_x509.js
@@ -11,12 +11,12 @@ x509_options1 = Object.merge(common_options,
 var x509_options2 = x509_options1;
 load("jstests/replsets/initial_sync1.js");
 
-// Mixed clusterAuthMode: sendX509 and sendKeyfile and try adding --auth 
+// Mixed clusterAuthMode: sendX509 and sendKeyFile and try adding --auth 
 x509_options1 = Object.merge(common_options, 
                              {sslClusterFile: "jstests/libs/cluster-cert.pem",
                               clusterAuthMode: "sendX509",
                               auth: ""});
-x509_options2 = Object.merge(common_options, {clusterAuthMode: "sendKeyfile"});
+x509_options2 = Object.merge(common_options, {clusterAuthMode: "sendKeyFile"});
 load("jstests/replsets/initial_sync1.js");
 
 // Mixed clusterAuthMode: x509 and sendX509, use the PEMKeyFile for outgoing connections 
